<resources>
    <string name="app_name">Torks Industrial Solar</string>
    <string name="torks_industrial_solar">Torks Industrial Solar</string>
    <string name="constant_power">Constant Power</string>
    <string name="home">Home</string>
    <string name="our_company">Our Company</string>
    <string name="services">Services</string>
    <string name="portfolio">Portfolio</string>
    <string name="contact_us">Contact Us</string>
    <string name="trust_in_solar">Trust in Solar</string>
    <string name="lifeline_for_renewable_energy">Lifeline for Renewable Energy</string>
    <string name="get_to_know_us">Get to Know Us</string>
    <string name="shifting_the_future">SHIFTING THE FUTURE</string>
    <string name="applying_decades_of_experience_backed_with_a_depth_of_knowledge_in_nelectronic_and_electrical_engineering_all_for_the_stability_of_your_plants">Applying decades of experience backed with a depth of knowledge in \nelectronic and electrical engineering all for the stability of your plants.</string>
    <string name="quick_response_time">Quick Response Time</string>
    <string name="with_a_knack_for_quick_ndelivery_we_are_capable_of_answering_and_delivering_top_notch_solutions_for_our_clients">With a knack for quick \ndelivery, we are capable of answering and delivering top notch solutions for our clients</string>
    <string name="efficient_workmanship">Efficient Workmanship</string>
    <string name="with_over_thirty_years_of_experience_we_have_the_capability_to_resolve_any_maintenance_and_troubleshooting_issues">With over thirty years of experience, we have the capability to resolve any maintenance and troubleshooting issues.</string>
    <string name="reliability">Reliability</string>
    <string name="our_word_is_our_bond_we_have_a_team_whoa_re_honest_and_truthful_in_our_assessment_and_troubleshooting_services">Our word is our bond. We have a team whoa re honest and truthful in our assessment and troubleshooting services.</string>
    <string name="find_out_more_about_us">Find Out More About Us</string>
    <string name="why_clients_choose_us">Why clients choose us?</string>
    <string name="it_s_easier_to_have_the_best_quality_services_to_meet_our_customer_needs_we_constantly_improve_and_deliver_on_our_promise_we_constantly_monitor_our_systems">It\'s easier to have the best quality services. To meet our customer needs, we constantly improve and deliver on \nour promise. We constantly monitor our systems:</string>
    <string name="survey_95">Survey 95%</string>
    <string name="installation_98">Installation 98%</string>
    <string name="environmental_care">Environmental Care</string>
    <string name="sustainability_matters">Sustainability Matters</string>
    <string name="we_are_the_backbone_of_a_sustainable_renewable_energy_supply">We are the backbone of a sustainable renewable energy supply.</string>
    <string name="torks_industrial_all_rights_reserved_2023">Torks Industrial All Rights Reserved 2023</string>
    <string name="scroll">scroll</string>
    <string name="why_us">why us</string>
    <string name="why_us_">Why Us</string>
    <string name="torks_industrial_solar_tis_engineers_are_nan_american_and_german_trained_nproficient_experts_in_electronic_engineering_and_in_the_mechanics_and_technology_of_solar_equipment_we_design_our_own_solar_equipment_our_engineers_and_technician_are_well_vested_in_solar_technology_and_have_the_capability_to_troubleshoot_various_solar_equipment">Torks Industrial Solar (TIS) engineers are \nan American and German trained \nproficient experts in electronic engineering and in the mechanics and technology of solar equipment. We design our own solar equipment. Our engineers and technician are well vested in solar technology and have the capability to troubleshoot various solar equipment.</string>
    <string name="our_solutions">Our Solutions</string>
    <string name="tis_provides_accessible_affordable_quality_nsolar_energy_to_the_industrial_market_tis_s_nsolar_equipment_are_customized_to_nconceptually_suit_client_s_needs">TIS provides accessible, affordable, quality \nsolar energy to the industrial Market. TIS\'s \nsolar equipment are customized to \nconceptually suit client\'s needs</string>
    <string name="our_advantages">Our Advantages</string>
    <string name="what_differentiates_tis_is_our_significantly_experienced_management_team_experienced_engineers_and_technicians_our_ability_to_customize_solar_units_to_the_needs_of_our_clients_train_and_sustain_a_domestic_workforce_and_provide_solar_technology_systems_that_meet_needs_conceptually">What differentiates TIS is our significantly experienced management team, experienced engineers and technicians. Our ability to customize solar units to the needs of our clients, train and sustain a domestic workforce, and provide solar technology systems that meet needs conceptually.</string>
    <string name="testimonials">Testimonials</string>
</resources>