<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@color/background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/coordinator"
        app:layout_constraintTop_toTopOf="@id/layout"
        app:layout_constraintLeft_toLeftOf="@id/layout"
        app:layout_constraintRight_toRightOf="@+id/layout">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appBar">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:menu="@menu/app_menu"
                android:id="@+id/toolbar">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logo"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="65dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/torks_industrial_solar"
                        android:textColor="@color/black"
                        android:textSize="13sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="65dp"
                        android:layout_marginTop="28dp"
                        android:fontFamily="@font/montserrat_light"
                        android:text="@string/constant_power"
                        android:textColor="@color/black"
                        android:textSize="10sp"/>
                </RelativeLayout>



            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/coordinator"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:id="@+id/relative">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/our_company"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/montserrat"/>
        
        <View
            android:layout_width="365dp"
            android:layout_height="0.5dp"
            android:background="@color/white"
            android:layout_marginStart="25dp"
            android:layout_marginTop="7dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/relative"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:id="@+id/linear1">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:contentDescription="@string/why_us"
            android:src="@drawable/whyus"
            android:layout_marginStart="20dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/why_us_"
                android:textColor="@color/yellow"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:textAllCaps="true"
                android:textSize="13sp"
                android:fontFamily="@font/montserrat"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/white"
                android:text="@string/torks_industrial_solar_tis_engineers_are_nan_american_and_german_trained_nproficient_experts_in_electronic_engineering_and_in_the_mechanics_and_technology_of_solar_equipment_we_design_our_own_solar_equipment_our_engineers_and_technician_are_well_vested_in_solar_technology_and_have_the_capability_to_troubleshoot_various_solar_equipment"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="365dp"
        android:layout_height="0.5dp"
        android:background="@color/white"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/linear1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/view1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_solutions"
            android:textColor="@color/yellow"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:fontFamily="@font/montserrat"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tis_provides_accessible_affordable_quality_nsolar_energy_to_the_industrial_market_tis_s_nsolar_equipment_are_customized_to_nconceptually_suit_client_s_needs"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat"/>
    </LinearLayout>

<ImageView
    android:layout_width="120dp"
    android:layout_height="130dp"
    android:src="@drawable/green"
    android:layout_marginStart="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>